Added ability to create posts, edited deactivation pages, layout, profile, login and signup pages

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,3 +1,4 @@
-<h1>Welcome, <%= session[:user_name] %> </h1>
+<h1>Welcome, <%= session[:user_fullname] %> </h1>
 
-<button onclick="window.location.href = './deactivation';">Deactivation</button
+<button onclick="window.location.href = './deactivation';">Deactivation</button>
+<button onclick="window.location.href = './createpost';">Create Database Entry</button>
