--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,7 @@
                 <a href='/login'>Login</a>
             <% end %>
             <% if session[:user_id] %>
-                <a href='/profile'><%= session[:user_name] %></a>
+                <a href='/profile'>Profile: <%= session[:user_fullname] %></a>
                 <a href='/logout'>Logout</a>
             <% end %>
         </div>
