Reworked users table for better wording, Added posts page with posts for user showing up on their profile

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,4 +1,15 @@
 <h1>Welcome, <%= session[:user_fullname] %> </h1>
 
+
 <button onclick="window.location.href = './deactivation';">Deactivation</button>
 <button onclick="window.location.href = './createpost';">Create Database Entry</button>
+
+<div id="profilePosts">
+
+    <% @posts.each do |post| %>
+
+    <%= post.content %>
+
+    <% end %>
+
+</div>
