--- a/views/createpost.erb
+++ b/views/createpost.erb
@@ -1,4 +1,4 @@
 <form action='/createpost' method="POST">
-    <textarea cols="50" rows="5" placeholder="Database Entry" name="post[post]"></textarea>
+    <textarea cols="50" rows="5" placeholder="Database Entry" name="post[content]"></textarea>
     <input type="submit" value="Submit Entry">
 </form>
