added title to users table, styled both header and posts via grid

--- a/views/createpost.erb
+++ b/views/createpost.erb
@@ -1,4 +1,5 @@
 <form action='/createpost' method="POST">
+    <textarea cols="30" rows="2" placeholder="Title" name="post[title]"></textarea>
     <textarea cols="50" rows="5" placeholder="Database Entry" name="post[content]"></textarea>
     <input type="submit" value="Submit Entry">
 </form>
