--- a/public/main.css
+++ b/public/main.css
@@ -6,7 +6,33 @@ body {
     color: white;
 }
 
+#navbar {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-gap: 2%;
+    justify-content: right;
+}
+
 #navbar a {
     text-decoration: none;
     color: white;
+}
+
+#profilePosts {
+    display: grid;
+    grid-template-rows: repeat(1, auto);
+    grid-gap: 20%;
+}
+
+#profilepostContent {
+    color: #333333;
+    font-size: 9px;
+    border: #ffffff;
+    border-radius: 20px;
+    border-style: solid;
+    background-color: #ffffff;
+}
+
+#profilepostContent h1 {
+    display:inline
 }
