--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,12 @@
-<h1>Welcome to the Umbrella Corporation Research & Development Database</h1>
+<style>
+body {background-image: url(img/login2.png);}
+body {background-size: cover;}
+</style>
+
+<link rel="stylesheet" href="homepage.css">
+
+<div id='logo'>
+
+<img src='img/logo.png'>
+
+</div>
