--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Umbrella Corporation</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="img/icon.png"
 </head>
 <body>
     
