--- a/views/login.erb
+++ b/views/login.erb
@@ -1,6 +1,21 @@
-<h1>Log In</h1>
+<style>
+body {background-image: url(img/login2.png);}
+body {background-size: cover;}
+</style>
+
+<div id="logo">
+
+    <img src='img/logo.png'>
+
+    <div id="loginPrompt"> 
+
+    
     <form action='/login' method='post'>
-    <input type="email" name="email" placeholder="Email">
-    <input type="password" name="password" placeholder="Password">
-    <input type="submit" value="Access">
-</form>
+        <input type="email" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Password">
+        <input type="submit" value="Access">
+    </form>
+
+    </div>
+
+</div>
