--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,8 +1,23 @@
-<form action='/signup' method="POST">
-    <input type="text" placeholder="First Name" name="user[first_name]">
-    <input type="text" placeholder="Last Name" name="user[last_name]">
-    <input type="email" placeholder="Email" name="user[email]">
-    <input type="password" placeholder="Password" name="user[password]">
-    <input type="sector" placeholder="Sector ID" name="user[sector]">
-    <input type="submit" value="Create User">
-</form>
+<style>
+body {background-image: url(img/login2.png);}
+body {background-size: cover;}
+</style>
+
+<div id='logo'>
+
+    <img src='img/logo.png'>
+
+</div>
+
+<div id='signUp'>
+
+    <form action='/signup' method="POST">
+        <input type="text" placeholder="First Name" name="user[first_name]">
+        <input type="text" placeholder="Last Name" name="user[last_name]">
+        <input type="email" placeholder="Email" name="user[email]">
+        <input type="password" placeholder="Password" name="user[password]">
+        <input type="sector" placeholder="Sector ID" name="user[sector]">
+        <input type="submit" value="Create User">
+    </form>
+
+</div>
