Removing SQlite3 gem for Heroku deployment

--- a/public/main.css
+++ b/public/main.css
@@ -34,8 +34,8 @@ body {
 
 #signUp {
     display: grid;
-    grid-template-columns: repeat(5, auto);
     grid-gap: 5%;
+    justify-content: center;
 }
 
 #profilePosts {
