--- a/public/main.css
+++ b/public/main.css
@@ -42,7 +42,9 @@ body {
     display: grid;
     grid-template-rows: repeat(1, auto);
     grid-gap: 20%;
-    justify-content: center;
+    width: 50%;
+    padding: 3%;
+    margin: 1%;
 }
 
 #postTitle {
