--- a/public/main.css
+++ b/public/main.css
@@ -53,6 +53,7 @@ body {
     border-radius: 5px;
     border-style: solid;
     background-color: #ffffff;
+    padding-bottom: 5%;
 }
 
 #postContent {
@@ -60,6 +61,9 @@ body {
     border-radius: 5px;
     border-style: solid;
     background-color: #ffffff;
+    padding-left: 4%;
+    margin-top: -2%;
+
 }
 
 #postContent h1 {
