--- a/views/posts.erb
+++ b/views/posts.erb
@@ -1,3 +1,10 @@
+<style>
+
+body {background-image: url(img/profile2.png)}
+body {background-size: contain;}
+
+</style>
+
 <h2>Posts</h2>
 
 <div id="profilePosts">
