--- a/public/main.css
+++ b/public/main.css
@@ -48,26 +48,26 @@ body {
 }
 
 #postTitle {
-    color: #333333;
-    border: #ffffff;
+    color: #c7c7c7;
+    border: #8585853a;
     border-radius: 5px;
     border-style: solid;
-    background-color: #ffffff;
+    background-color: #8585853a;
     padding-bottom: 5%;
 }
 
 #postContent {
-    border: #ffffff;
+    border: #8585853a;
     border-radius: 5px;
     border-style: solid;
-    background-color: #ffffff;
+    background-color: #8585853a;
     padding-left: 4%;
-    margin-top: -2%;
+    margin-top: -0.9%;
 
 }
 
 #postContent h1 {
     display: inline;
-    color: #333333;
+    color: #c7c7c7;
     font-size: 20px;
 }
