Formatted styling for Profile, posts and am now working on the post creation page

--- a/views/createpost.erb
+++ b/views/createpost.erb
@@ -1,5 +1,13 @@
+<style>
+
+body {background-image: url(img/profile2.png);}
+body {background-size: cover;}
+body {background-repeat: no-repeat;}
+
+</style>
+
 <form action='/createpost' method="POST">
-    <textarea cols="30" rows="2" placeholder="Title" name="post[title]"></textarea>
-    <textarea cols="50" rows="5" placeholder="Database Entry" name="post[content]"></textarea>
+    <textarea cols="30" rows="2" id="title" placeholder="Title" name="post[title]"></textarea>
+    <textarea cols="50" rows="5" id="content" placeholder="Database Entry" name="post[content]"></textarea>
     <input type="submit" value="Submit Entry">
 </form>
