--- a/views/posts.erb
+++ b/views/posts.erb
@@ -1,7 +1,9 @@
 <style>
 
-body {background-image: url(img/profile2.png)}
+body {background-image: url(img/profile2.png);}
 body {background-size: contain;}
+
+h2 {padding: 2%;}
 
 </style>
 
