--- a/views/deactivate.erb
+++ b/views/deactivate.erb
@@ -1,1 +1,9 @@
+<style>
+
+body {background-image: url(img/warning.png);}
+body {background-size: cover;}
+
+</style>
+
+
 <h1>Your account has been deactivated and you have been logged out. Please return to the main page.</h1>
