--- a/views/posts.erb
+++ b/views/posts.erb
@@ -4,6 +4,9 @@ body {background-image: url(img/profile2.png);}
 body {background-size: contain;}
 
 h2 {padding: 2%;}
+h2 {padding-left: 5%;}
+
+#profilePosts {padding-left: 8%;}
 
 </style>
 
