--- a/views/reactivate.erb
+++ b/views/reactivate.erb
@@ -1,1 +1,9 @@
+<style>
+
+body {background-image: url(img/profile2.png);}
+body {background-size: cover;}
+
+</style>
+
+
 <h1>Your account has been re-activated. Please log-in again.</h1>
