--- a/views/deactivated.erb
+++ b/views/deactivated.erb
@@ -1,3 +1,11 @@
+<style>
+
+body {background-image: url(img/profile2.png);}
+body {background-size: cover;}
+
+</style>
+
+
 <h1>This account has been deactivated. To reactivate this account, press the button below. Otherwise, please return to the home screen or close this window.</h1>
 
 <button onclick="window.location.href = './reactivate';">Reactivate</button>
