--- a/views/deactivation.erb
+++ b/views/deactivation.erb
@@ -1,3 +1,10 @@
+<style>
+
+body {background-image: url(img/warning.png);}
+body {background-size: cover;}
+
+</style>
+
 <h1>This will deactivate your profile. Your database entries will still exist within Umbrella Corporation records, and may be accessed by other researchers and staff. Your profile may be reactivated after deactivation if you desire.</h1>
 
 <h1>Would you like to deactivate your profile?</h1>
