Added styling to buttons on Profile page for creating posts/deactivating accounts, added a button in the navbar to view others posts if logged in

--- a/public/main.css
+++ b/public/main.css
@@ -67,7 +67,8 @@ body {
     background-color: #8585853a;
     padding-left: 4%;
     margin-top: -0.9%;
-
+    padding-top: 4%;
+    padding-bottom: 4%;
 }
 
 #postContent h1 {
