--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,6 +20,7 @@
             <% if session[:user_id] %>
                 <a href='/profile'>Profile: <%= session[:user_fullname] %></a>
                 <a href='/logout'>Logout</a>
+                <a href='/posts'>Other Entries</a>
             <% end %>
         </div>
     </nav>
