--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,17 +1,25 @@
 <style>
+
 body {background-color: #000000;}
 body {background-image: url(img/profile.png);}
 body {background-size: contain;}
 body {background-repeat: no-repeat;}
 
+h1 {padding: 2%;}
 h2 {padding: 2%;}
+
+#buttons {padding: 2%}
+
 </style>
 
 <h1>Welcome, <%= session[:user_fullname] %> </h1>
 
+<div id=buttons>
 
 <button onclick="window.location.href = './deactivation';">Deactivation</button>
 <button onclick="window.location.href = './createpost';">Create Database Entry</button>
+
+</div>
 
 <h2>Posts</h2>
 
